--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -16,40 +16,36 @@ footer {
     margin: 0 auto;
     padding: 0 15px;
 }
-.imgs{
-    position : flex;
-    scale: 10px;
+.box{
+    padding: 15px;
+    width: 50%;
+    display: flex;
+    margin: auto;
     text-align: center;
+    justify-content: center;
+    position: flex;
+    align-items: center;
     float: auto;
 }
-
-.box{
-    position: relative;
-    float: center;
-    padding-left: 250px;
-    padding-bottom: 20px;
-}
-
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-right: -35px;
-    margin-left: -35px;
+    align-items: center;
+    justify-content: center;
 }
 
 .col-md-4 {
-    position:relative;
+    position:inline;
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
     text-align: center;
+    justify-content: center;
 }
-
 h3 {
     margin: auto;
     font-size: 20px;
     margin-bottom: 15px;
     color: #a59aa6;
-    cursor: pointer;
 }
 
 ul {
@@ -66,6 +62,12 @@ li {
     display: inline-block;
     margin-left: 23px;
     margin-right: 30px;
+
+}
+.he{
+    position:relative;
+    padding-left: 20px;
+    text-align: center;
 }
 
 .social-icons li a {
