--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -15,6 +15,7 @@ footer {
     max-width: 80%;
     margin: 0 auto;
     padding: 0 15px;
+    height: 300px;
 }
 .box{
     padding: 15px;
@@ -87,6 +88,26 @@ li {
         flex: 0 0 100%;
         max-width: 100%;
     }
+        .box {
+            max-width: 100px;
+            max-height: 100px;
+        }
+    
+        .imgs {
+            scale: 3;
+        }
+        }
+    
+            
+
+@media (max-width: 375px){
+    .box{
+        max-width: 100px;
+        max-height: 100px;
+    }
+    .imgs {
+            scale: 3;
+        }
 }
 .hel:hover{
     filter: blur(2px) brightness(100%);
