--- a/src/components/auth/design.css
+++ b/src/components/auth/design.css
@@ -1,3 +1,18 @@
-.form{
+.forms{
+    background-image: url("../../../public/assets/mesh-241.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
+  .cardRegister{
+    margin: auto;
     background-color: #ffffff;
-}
+    width: 300px;
+    float: center;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+  }
