--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ img {
     right: 0;
     padding: 40px;
     backdrop-filter: blur(30px);
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.9);
 
     z-index: 100;
   }
@@ -131,6 +131,9 @@ img {
   .title-text {
     font-size: 2em;
   }
+  .hero-p {
+    font-size: 1.2em;
+  }
   .intro {
     padding: 120px;
   }
@@ -142,12 +145,56 @@ img {
     flex-direction: column;
   }
 }
+@media (min-width: 1340px) {
+  #title {
+    font-size: 3.2em;
+  }
+  .logo {
+    width: 80%;
+  }
+  #about-h {
+    display: flex;
+    padding: 200px;
+    margin-top: -100px;
+    align-items: center;
+    justify-content: space-around;
+    flex-direction: row;
+  }
+  #clg {
+    height: 400px;
+    width: 3000px;
+  }
+  .about-p {
+    margin-left: 30px;
+  }
+}
+@media (min-width: 376px) {
+  .title-text {
+    font-size: 2.5em;
+  }
+  .about-h {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+  }
+  .about {
+    padding: 20px;
+  }
+  .about-p {
+    text-align: justify;
+    margin-top: 30px;
+  }
+  .clg {
+    height: 150px;
+  }
+}
+
 @media (max-width: 375px) {
   .img-h {
     width: 450px;
   }
   .title-text {
-    font-size: 1em;
+    font-size: 2.2em;
   }
   .hero-head {
     text-align: center;
@@ -164,7 +211,24 @@ img {
     padding: 20px;
   }
   .about-p {
-    text-align: justify;
+    text-align: start;
+    margin-top: 30px;
+  }
+  .clg {
+    height: 150px;
+  }
+  #hero-p {
+    font-size: 1em;
+  }
+}
+@media (min-width: 1301px) {
+  #hero-p {
+    font-size: 1.2em;
+  }
+}
+@media (min-width: 706px) {
+  .clg {
+    height: 300px;
   }
 }
 
@@ -182,7 +246,7 @@ img {
     height: 100vh;
   }
 }
-.hero-p {
+#hero-p {
   text-align: justify;
 }
 
@@ -215,10 +279,6 @@ img {
   to {
     filter: hue-rotate(360deg);
   }
-}
-
-.title-text {
-  font-size: 2.7em;
 }
 
 .hero-head {
