--- a/src/components/auth/design.css
+++ b/src/components/auth/design.css
@@ -8,11 +8,13 @@
     align-items: center;
   }
   .cardRegister{
-    margin: auto;
+    /* margin: auto; */
+    margin-top: 20px;
     background-color: #ffffff;
-    width: 300px;
-    float: center;
+    width:350px;
+    /* float: center; */
+    /* text-align: center; */
     border-radius: 10px;
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
   }
