--- a/src/components/auth/design.css
+++ b/src/components/auth/design.css
@@ -6,6 +6,7 @@
     justify-content: center;
     display: flex;
     align-items: center;
+    z-index: -3;
   }
   .cardRegister{
     /* margin: auto; */
