--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -11,11 +11,13 @@ footer {
     font-weight: bold;
 }
 
-.container {
-    max-width: 80%;
+.container-fluid {
+    max-width: 100%;
     margin: 0 auto;
     padding: 0 15px;
     height: 300px;
+    justify-content: center;
+    display: block;
 }
 .box{
     padding: 15px;
@@ -35,8 +37,9 @@ footer {
     justify-content: center;
 }
 
-.col-md-4 {
-    position:inline;
+.col-md-3 {
+    display: relative;
+    position:relative;
     flex: 0 0 33.333333%;
     max-width: 33.333333%;
     text-align: center;
@@ -47,6 +50,7 @@ h3 {
     font-size: 20px;
     margin-bottom: 15px;
     color: #a59aa6;
+    justify-content: center;
 }
 
 ul {
@@ -63,7 +67,9 @@ li {
     display: inline-block;
     margin-left: 23px;
     margin-right: 30px;
-
+    justify-content: center;
+    position: relative;
+    
 }
 .he{
     position:relative;
@@ -77,14 +83,14 @@ li {
 }
 
 @media (max-width: 991px) {
-    .col-md-4 {
+    .col-md-3 {
         flex: 0 0 50%;
         max-width: 50%;
     }
 }
 
 @media (max-width: 767px) {
-    .col-md-4 {
+    .col-md-3 {
         flex: 0 0 100%;
         max-width: 100%;
     }
@@ -113,7 +119,8 @@ li {
     filter: blur(2px) brightness(100%);
     background-color: #201F21;
     border-style: hidden;
-    border-radius: 50%;
+    border-radius: 90%;
+    opacity:25%;
 }
 h3:after {
     display: block;
