--- a/src/components/events/eventDetails/eventDetails.css
+++ b/src/components/events/eventDetails/eventDetails.css
@@ -3,34 +3,19 @@
 .details{
     display: flex;
     flex-direction:row;
-    justify-content:space-around;
+    justify-content:center;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
-/* .data{
-    display: flex;
-    margin-top: 15px;
-    flex-direction:row;
-    justify-content:space-evenly;
 
 
-} */
 
-.content-1{
-    color: black;
-    /* width: 60%; */
-    text-align: start;
-}
-h2{
-    margin-top: 2px;
-    text-decoration-line :underline;
-    color: black;
-}
 .image{
     /* width: 40%; */
     /* width: 300px; */
     text-align: center;
 }
-img{
+.event-image{
     width:25vw;
     height:50vh;
     align-items: center;
