--- a/src/components/events/index/main.css
+++ b/src/components/events/index/main.css
@@ -164,6 +164,8 @@
     padding: 30px 20px;
     text-align: center;
     width: 100%;
+    display: flex;
+    flex-direction: column;
     transition: 0.5s ;
     transform: translateY(145px);
 
@@ -179,6 +181,7 @@
     font-weight: 500;
     color:#e50afd;
     line-height: 1.2em;
+    text-decoration: none;
 
 }
 
