--- a/src/index.css
+++ b/src/index.css
@@ -67,7 +67,24 @@ img {
   filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#005348", endColorstr="#000000", GradientType=1 );
   width: 100%;
 }
-
+#btn1 {
+  color: white;
+}
+#btn1:hover {
+  color: black;
+}
+#btn2 {
+  color: black;
+}
+#btn2:hover {
+  color: white;
+}
+#lin {
+  color: white;
+}
+#lin:hover {
+  color: #0dff00;
+}
 .container {
   position: relative;
   width: 100%;
@@ -87,7 +104,7 @@ img {
 
 @media (max-width: 768px) {
   .title-text {
-    font-size: 3em;
+    font-size: 1em;
   }
   .intro {
     flex-direction: column-reverse;
@@ -109,18 +126,21 @@ img {
     right: 0;
     padding: 40px;
     backdrop-filter: blur(30px);
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.9);
 
     z-index: 100;
   }
   .img-h {
     height: 100%;
     width: 100%;
-    float: left;
   }
   .logo {
     width: 85%;
     object-fit: contain;
+  }
+  .btns {
+    display: flex;
+    align-items: center;
   }
 }
 
@@ -130,7 +150,10 @@ img {
     margin-left: 50px;
   }
   .title-text {
-    font-size: 2.5em;
+    font-size: 2em;
+  }
+  .hero-p {
+    font-size: 1.2em;
   }
   .intro {
     padding: 120px;
@@ -142,6 +165,9 @@ img {
     display: flex;
     flex-direction: column;
   }
+}
+.hlink:hover {
+  color: #0dff00;
 }
 @media (min-width: 1340px) {
   #title {
@@ -160,7 +186,8 @@ img {
   }
   #clg {
     height: 400px;
-    width: 3000px;
+    width: 4800px;
+    margin-left: -100px;
   }
   .about-p {
     margin-left: 30px;
@@ -186,6 +213,7 @@ img {
     height: 150px;
   }
 }
+
 @media (max-width: 375px) {
   .img-h {
     width: 450px;
@@ -199,6 +227,43 @@ img {
   .intro {
     padding: 80px;
   }
+  .about-h {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+  }
+  .about {
+    padding: 20px;
+  }
+  .about-p {
+    text-align: start;
+    margin-top: 30px;
+  }
+  .clg {
+    height: 150px;
+  }
+  #hero-p {
+    font-size: 1em;
+  }
+}
+@media (min-width: 1301px) {
+  #hero-p {
+    font-size: 1.2em;
+  }
+}
+@media (min-width: 706px) {
+  .clg {
+    height: 300px;
+  }
+}
+
+@media (min-width: 575px) {
+  .intro {
+    padding: 90px;
+  }
+  .hero {
+    height: 100vh;
+  }
 }
 
 @media (min-width: 1169px) {
@@ -206,7 +271,7 @@ img {
     height: 100vh;
   }
 }
-.hero-p {
+#hero-p {
   text-align: justify;
 }
 
@@ -241,12 +306,11 @@ img {
   }
 }
 
-.title-text {
-  font-size: 3.5em;
-}
-
 .hero-head {
-  font-size: 1.3em;
+  font-size: 1.5em;
+}
+.hero-p {
+  font-size: 1em;
 }
 
 html {
@@ -258,4 +322,8 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+
+a {
+  text-decoration: none !important;
 }
