--- a/src/components/auth/design.css
+++ b/src/components/auth/design.css
@@ -15,6 +15,6 @@
     /* float: center; */
     /* text-align: center; */
     border-radius: 10px;
-    /* display: flex;
-    justify-content: center; */
+     display: flex;
+    justify-content: center;
   }
