--- a/src/index.css
+++ b/src/index.css
@@ -43,30 +43,7 @@ img {
   height: 100%;
   max-width: 100%;
 }
-.hero {
-  background: hsla(172, 100%, 16%, 1);
 
-  background: radial-gradient(
-    circle,
-    hsla(172, 100%, 16%, 1) 0%,
-    hsla(0, 0%, 0%, 1) 100%
-  );
-
-  background: -moz-radial-gradient(
-    circle,
-    hsla(172, 100%, 16%, 1) 0%,
-    hsla(0, 0%, 0%, 1) 100%
-  );
-
-  background: -webkit-radial-gradient(
-    circle,
-    hsla(172, 100%, 16%, 1) 0%,
-    hsla(0, 0%, 0%, 1) 100%
-  );
-
-  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#005348", endColorstr="#000000", GradientType=1 );
-  width: 100%;
-}
 #btn1 {
   color: white;
 }
@@ -111,7 +88,7 @@ img {
   }
   .svg-sec {
     width: 300px;
-    z-index: 10;
+    z-index: 0;
     position: relative;
     margin-top: 0.1em;
   }
@@ -119,23 +96,25 @@ img {
     z-index: 100000000000;
   }
   .mob-nav {
-    position: fixed;
     top: 0;
     height: 100vh;
     width: 100%;
     right: 0;
     padding: 40px;
+    position: absolute;
     backdrop-filter: blur(30px);
-    background: rgba(0, 0, 0, 0.9);
-
+    background: rgb(0, 0, 0);
     z-index: 100;
+  }
+  .mob {
+    padding: 30px !important;
   }
   .img-h {
     height: 100%;
     width: 100%;
   }
   .logo {
-    width: 85%;
+    width: 100%;
     object-fit: contain;
   }
   .btns {
@@ -165,6 +144,10 @@ img {
     display: flex;
     flex-direction: column;
   }
+  .logo {
+    width: 80%;
+    object-fit: contain;
+  }
 }
 .hlink:hover {
   color: #0dff00;
@@ -176,45 +159,34 @@ img {
   .logo {
     width: 80%;
   }
-  #about-h {
-    display: flex;
-    padding: 200px;
-    margin-top: -100px;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: row;
-  }
-  #clg {
-    height: 400px;
-    width: 4800px;
-    margin-left: -100px;
-  }
-  .about-p {
-    margin-left: 30px;
-  }
 }
 @media (min-width: 376px) {
   .title-text {
     font-size: 2.5em;
   }
-  .about-h {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
+}
+
+@media (max-width: 538px) {
+  .social {
+    visibility: hidden;
   }
-  .about {
-    padding: 20px;
-  }
-  .about-p {
-    text-align: justify;
-    margin-top: 30px;
-  }
-  .clg {
-    height: 150px;
+  .to {
+    visibility: hidden;
   }
 }
 
 @media (max-width: 375px) {
+  .hero {
+    padding: 80px;
+  }
+  .logo {
+    height: 60px;
+    margin-right: 30px;
+  }
+
+  .to {
+    display: none;
+  }
   .img-h {
     width: 450px;
   }
@@ -227,33 +199,20 @@ img {
   .intro {
     padding: 80px;
   }
-  .about-h {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-  }
-  .about {
-    padding: 20px;
-  }
-  .about-p {
-    text-align: start;
-    margin-top: 30px;
-  }
-  .clg {
-    height: 150px;
-  }
+
   #hero-p {
     font-size: 1em;
+  }
+  .social {
+    visibility: hidden;
   }
 }
 @media (min-width: 1301px) {
   #hero-p {
     font-size: 1.2em;
   }
-}
-@media (min-width: 706px) {
-  .clg {
-    height: 300px;
+  .social {
+    visibility: visible;
   }
 }
 
@@ -264,11 +223,17 @@ img {
   .hero {
     height: 100vh;
   }
+  .social {
+    visibility: visible;
+  }
 }
 
 @media (min-width: 1169px) {
   .hero {
     height: 100vh;
+  }
+  .social {
+    visibility: visible;
   }
 }
 #hero-p {
@@ -317,13 +282,20 @@ html {
   scroll-behavior: smooth;
 }
 
-.about {
-  background-image: url("../public/assets/mesh-241.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
 a {
   text-decoration: none !important;
+}
+
+#ic {
+  border: 2px solid #0dff00;
+  margin-top: 10px;
+}
+
+.social {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  bottom: 0;
+  padding: 60px;
+  left: 0;
 }
