--- a/src/components/events/eventDetails/eventDetails.css
+++ b/src/components/events/eventDetails/eventDetails.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk&display=swap");
 
-.eventDetails{
-    display: flex;
-    flex-direction:row;
-    justify-content:center;
-    background: black;
+.eventDetails {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background: black;
 
-    /* background: hsla(172, 100%, 16%, 1);
+  /* background: hsla(172, 100%, 16%, 1);
 
   background: radial-gradient(
     circle,
@@ -31,15 +31,22 @@
 }
 
 .event_name {
-    font-weight: bold;
-    text-shadow: 0 0 10px #09f905, 0 0 20px #31e340;
-    font-family: 'Space Grotesk', sans-serif;
-  }
-  
-  .event_name  {
-    transition: 0.5s ease-out;
-  }
-  
-  .event_name:hover  {
-    color: #fff;
-  }
+  font-weight: bold;
+  text-shadow: 0 0 10px #09f905, 0 0 20px #31e340;
+  font-family: "Space Grotesk", sans-serif;
+}
+
+.event_name {
+  transition: 0.5s ease-out;
+}
+
+.event_name:hover {
+  color: #fff;
+}
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
