--- a/src/components/Game.css
+++ b/src/components/Game.css
@@ -1,117 +1,110 @@
 @import "~slick-carousel/slick/slick.css";
 @import "~slick-carousel/slick/slick-theme.css";
 
-.outgame{
-    background-color: rgb(132, 236, 254);
-    justify-content: left;
-    width: 100% ;
-    margin: .5rem auto;
-    display: flex; 
-    align-items: left;
-    padding: 100px auto ;
-    position: absolute;
-    float: left;   
-    background: radial-gradient(circle,
-                rgb(255, 102, 0) 0%,
-                rgb(56, 43, 34) 100%);
-    
-
-
-
+.outgame {
+  background-color: rgb(132, 236, 254);
+  justify-content: left;
+  width: 100%;
+  margin: 0.5rem auto;
+  display: flex;
+  align-items: left;
+  padding: 100px auto;
+  position: absolute;
+  float: left;
+  background: radial-gradient(
+    circle,
+    rgb(255, 102, 0) 0%,
+    rgb(56, 43, 34) 100%
+  );
 }
 
-.txt{
-    /* background-color: rgb(255, 251, 10); */
-    margin:2rem auto;
-    margin-left: 2rem;
-    border-radius: 12px;
+.txt {
+  /* background-color: rgb(255, 251, 10); */
+  margin: 2rem auto;
+  margin-left: 2rem;
+  border-radius: 12px;
 }
-#title{
-    text-align: center;
-}
+
 .slick-dots li button:before {
-    color: rgb(0, 0, 0) ;
-    font-size: 10px !important;
-    margin-top: 10px;
-    transform: scale(1.5);
+  color: rgb(0, 0, 0);
+  font-size: 10px !important;
+  margin-top: 10px;
+  transform: scale(1.5);
 }
-.slick-dots li button:Hover{
-    transform: scale(1.2);
+.slick-dots li button:hover {
+  transform: scale(1.2);
 }
 
 .slick-dots li.slick-active button:before {
-    color: rgb(255, 0, 0) !important;
-    font-size: 12px !important;
+  color: rgb(255, 0, 0) !important;
+  font-size: 12px !important;
 }
 .game {
-        width: 70rem;
-        margin: 10rem auto;
-        margin-left: 0;
-        height: 570px;
-        float: auto;
-        margin-left: 0;
-        display: block;
-        justify-content: left;
-        text-align: right;
+  width: 70rem;
+  margin: 10rem auto;
+  margin-left: 0;
+  height: 570px;
+  float: auto;
+  margin-left: 0;
+  display: block;
+  justify-content: left;
+  text-align: right;
+}
 
-    }
-  
-    
+.gametxt {
+  text-align: left;
+  margin: 10rem auto;
+}
+.gametxt {
+  background-color: rgb(243, 149, 149);
+  margin: 2rem;
+  padding: 30px;
+  border-radius: 15px;
+  justify-content: center;
+}
 
-    .gametxt{
-        text-align: left;
-        margin:10rem auto;   
-    }
-    .gametxt{
-        background-color: rgb(243, 149, 149);
-        margin: 2rem;
-        padding: 30px;
-        border-radius: 15px;
-        justify-content: center;
-    }
-    
-    .slide img {
-        width: 50%;
-        margin: 0 auto;
-    }
-    .slide img:Hover{
-        transform: scale(1.2);
-        transition: 20ms;
-    }
-    .slide {
-        transform: scale(0.25);
-        transition: transform 300ms;
-        opacity: 0.5;
-    }
-    
-    .activeSlide {
-        transform: scale(0.8);
-        opacity: 1;
-    }
-    
-    .arrow {
-        position: absolute;
-        cursor: pointer;
-        z-index: 10;
-        transform: scale(2.5);
-        padding: 20px;
-    }
-    
-    .arrow svg {
-        transition: color 300ms;
-    }
-    
-    .arrow svg:hover {
-        color: #ffe368;
-        transform: scale(1.2);
-    }
-    
-    .next {
-        right: 0%;
-        top: 50%;
-    }
-    
-    .prev {
-        left: 0%;
-        top: 50%;
-    }
+.slide img {
+  width: 50%;
+  margin: 0 auto;
+}
+.slide img:hover {
+  transform: scale(1.2);
+  transition: 20ms;
+}
+.slide {
+  transform: scale(0.25);
+  transition: transform 300ms;
+  opacity: 0.5;
+}
+
+.activeSlide {
+  transform: scale(0.8);
+  opacity: 1;
+}
+
+.arrow {
+  position: absolute;
+  cursor: pointer;
+  z-index: 10;
+  transform: scale(2.5);
+  padding: 20px;
+}
+
+.arrow svg {
+  transition: color 300ms;
+}
+
+.arrow svg:hover {
+  color: #ffe368;
+  transform: scale(1.2);
+}
+
+.next {
+  right: 0%;
+  top: 50%;
+}
+
+.prev {
+  left: 0%;
+  top: 50%;
+}
