--- a/src/components/App.css
+++ b/src/components/App.css
@@ -25,7 +25,7 @@ h3 {
 .vertical-timeline-element-content {
   box-shadow: 0 0.25em 0.5em 0 transparent,
     0 0.4em 1.25em 0 transparent !important;
-  padding: 2em 3em !important;
+  padding: 0em 3em 0em 2em !important;
 }
 
 .date {
