--- a/src/index.css
+++ b/src/index.css
@@ -487,6 +487,7 @@ a {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 100000000000000000000000000000000000000000;
   background: linear-gradient(
     45deg,
     transparent 3%,
