--- a/src/index.css
+++ b/src/index.css
@@ -326,7 +326,7 @@ a {
 
 .social {
   display: flex;
-  position: absolute;
+  position: fixed;
   flex-direction: column;
   bottom: 0;
   padding: 60px;
