--- a/src/components/events/index/main.css
+++ b/src/components/events/index/main.css
@@ -149,7 +149,7 @@ overflow: hidden; } */
   transition: 0.5s;
 }
 
-/* .card:hover .imgBox img {
+.card:hover .imgBox img {
   opacity: 1;
   position: sticky;
   transition: transform 300ms;
@@ -197,14 +197,14 @@ overflow: hidden; } */
   opacity: 1;
 }
 
-/* .card .content .details a{
-    display: inline-block;
-    padding: 8px 15px;
-    background: #45f3ff;
-    color:#292929;
-    margin-top: 10px;
-    font-weight: 500;
-    text-decoration: none;
-    opacity: 0;
-    transition: .5s;
-} */
+.card .content .details a {
+  display: inline-block;
+  padding: 8px 15px;
+  /* background: #45f3ff; */
+  color: #292929;
+  margin-top: 10px;
+  font-weight: 500;
+  text-decoration: none;
+  opacity: 1;
+  transition: 0.5s;
+}
