--- a/src/index.css
+++ b/src/index.css
@@ -213,7 +213,6 @@ img {
   }
   .logo {
     height: 60px;
-    margin-right: 30px;
   }
 
   .to {
@@ -258,6 +257,12 @@ img {
   }
   .social {
     visibility: visible;
+  }
+}
+
+@media (max-width: 500px) {
+  .logo {
+    height: 40px;
   }
 }
 
