--- a/src/components/events/index/main.css
+++ b/src/components/events/index/main.css
@@ -147,6 +147,8 @@ overflow: hidden; } */
   /* filter: invert(1); */
   /* opacity: 0.5; */
   transition: 0.5s;
+  height: 150px;
+  width: 150px;
 }
 
 .card:hover .imgBox img {
