--- a/src/components/auth/register-form/styles.css
+++ b/src/components/auth/register-form/styles.css
@@ -191,3 +191,106 @@ p {
   box-shadow: none;
   transform: translateY(0);
 }
+
+/* media query for moblie view */
+@media screen and (max-width: 768px) {
+  .parent-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 32px;
+  }
+
+  .userAuth-banner {
+    margin-top: 10vh;
+    width: 90vw;
+    height: 40vh;
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    padding: 20px;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .con {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  h2 {
+    text-align: center;
+  }
+
+  .g-logo {
+    width: 30px;
+    margin-right: -1px;
+    margin-left: 17px;
+  }
+
+  .helper-content {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin-bottom: 5px;
+  }
+
+  p {
+    font-size: 0.9rem;
+    font-weight: 400;
+    margin-bottom: 10px;
+  }
+
+  .personalInfo-banner {
+    margin-top: 10vh;
+    width: 90vw;
+    height: 60vh;
+    background-color: #000;
+    border-radius: 15px;
+    padding: 20px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .individual-events-banner {
+    margin-top: -10vh;
+    width: 90vw;
+    height: 60vh;
+    background-color: #000;
+    border-radius: 15px;
+    padding: 20px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .registrationFees-banner {
+    margin-top: 10vh;
+    width: 90vw;
+    background-color: #f5f5f5;
+    border-radius: 15px;
+    padding: 20px;
+    color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .paymentButton {
+    position: relative;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+  }
+}
